# kg4fun

./: Makefile  README.md  pyproject.toml
configs/dataset_generation/: dataset1.yaml  dataset2.yaml
configs/test/: dataset1.yaml
data/processed/dataset1/: node_type_info.json  node_types.json
data/processed/dataset2/: node_type_info.json  node_types.json
data/raw/: README.md
data/raw/artwork-dataset/: README.md  dataset3.csv  dataset3_5_folds.pkl  dataset3_labels.csv
data/raw/pruning-datasets/: README.md
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: dataset_statistics.ipynb  eda_dataset1.ipynb  show_results.ipynb
notebooks/test/: connected_components.ipynb  eda_data.ipynb  eda_qwen.ipynb
scripts/data/: download_dataset.sh  generate-dataset1.sh  generate-dataset2.sh  install_wikidata.sh
scripts/evaluation/: evaluate-dataset1.sh  evaluate-dataset2.sh
scripts/summarization/: summarize-dataset1.sh  summarize-dataset2.sh
src/: cli.py
src/data/: __init__.py  dataset_generator.py
src/data/graph/: __init__.py  connected_components.py  edge.py
src/data/loading/: __init__.py  edge_type_dataset.py  node_cls_dataset.py
src/evalutation/: __init__.py  evaluation_run.py
src/metrics/: __init__.py  combined_rouge_score.py  combined_sem_score.py  decision_rouge_score.py  decision_sem_score.py  metric_collection.py  root_rouge_score.py  root_sem_score.py  sem_score.py
src/models/: __init__.py  huggingface_summarizer.py  ollama_summarizer.py
src/summarization/: __init__.py  summarization_run.py
src/utils/: __init__.py  general.py  strenum.py
(+271 files in other folders)
